--- a/style.css
+++ b/style.css
@@ -20,14 +20,31 @@ body {
   padding-top: 1.5rem;
   display: flex;
 }
+.button{
+  text-align: center;
+}
+#btn-clear{
+  color: var(--primary-color);
+  margin-top: 1.5rem;
+  border-color: var(--primary-color);
+  font-family: 'Roboto Mono', monospace;
+  padding: 0.8rem ;
+  margin-left: 1rem;
+  border-radius: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  display: inline;
+}
 #btn-translate{
+  margin-right: 1rem;
+  display: inline;
+  cursor: pointer;
+  font-weight: bold;
   color: white;
-  margin: auto;
-  display: flex;
   margin-top: 1.5rem;
   font-family: 'Roboto Mono', monospace;
-  padding: 1rem;
-  border-radius: 0.8rem;
+  padding: 0.8rem;
+  border-radius: 1rem;
   background-color: var(--primary-color);
 }
 #txt-input{
@@ -72,7 +89,6 @@ body {
   background-color: var(--primary-color);
 }
 .footer-heading{
-  
   text-align: center;
   margin-top: 0rem;
 }
@@ -86,8 +102,7 @@ body {
   padding: 0rem 1rem;
 }
 .link{
-  
   padding: 0.8rem 1rem;
-  text-decoration: none;
+  text-decoration: underline;
   color: white;
 }
