--- a/style.css
+++ b/style.css
@@ -1,53 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Sans+Pro&display=swap');
 
-:root{
-  --primary-color:#818cf8
-  ;
+:root {
+  --primary-color: #818cf8;
 }
+
 body {
   margin: 0rem;
   font-family: 'Roboto Mono', monospace;
 }
-.nav{
+
+.nav {
   margin-left: 1rem;
   margin-right: 1rem;
-  border-bottom-left-radius: 1rem ;
-  border-bottom-right-radius: 1rem ;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
   padding: 1rem;
   background-color: var(--primary-color);
 }
-.input{
+
+.navbar-description {
+  margin: 0px 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.input {
   padding-top: 1.5rem;
   display: flex;
 }
-.button{
+
+.button {
   text-align: center;
 }
-#btn-clear{
+
+#btn-clear {
   color: var(--primary-color);
   margin-top: 1.5rem;
   border-color: var(--primary-color);
   font-family: 'Roboto Mono', monospace;
-  padding: 0.8rem ;
+  padding: 0.8rem;
   margin-left: 1rem;
   border-radius: 1rem;
   font-weight: bold;
   cursor: pointer;
   display: inline;
 }
-#btn-translate{
+
+#btn-clear:focus {
+  outline: none;
+}
+
+.banner-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+#btn-translate {
+  border: none;
   margin-right: 1rem;
   display: inline;
   cursor: pointer;
   font-weight: bold;
+  font-size: 1.2rem;
   color: white;
   margin-top: 1.5rem;
   font-family: 'Roboto Mono', monospace;
-  padding: 0.8rem;
+  padding: 1rem;
   border-radius: 1rem;
   background-color: var(--primary-color);
+
 }
-#txt-input{
+
+#btn-translate:focus {
+  outline: none;
+}
+
+#txt-input {
+  outline: none;
   resize: none;
   width: 85%;
   height: 20vh;
@@ -58,18 +89,23 @@ body {
   font-size: large;
 }
 
-.hero-heading{
+.hero-heading {
+  border: 3px solid white;
+  border-radius: 0.5rem;
+  padding: 20px 0px;
   color: white;
   font-weight: bold;
   text-align: center;
 }
-.output-heading{
+
+.output-heading {
   padding: 1rem;
   text-align: center;
   font-size: larger;
 }
-#output{
-  border:1px solid black;
+
+#output {
+  border: 1px solid black;
   width: 85%;
   height: 20vh;
   padding: 1.5rem;
@@ -78,30 +114,35 @@ body {
   border-radius: 0.8rem;
   margin-bottom: 1.5rem;
 }
-.footer{
+
+.footer {
   margin-left: 1rem;
   margin-right: 1rem;
-  border-top-left-radius: 1rem ;
-  border-top-right-radius: 1rem ;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   padding: 1rem;
   text-align: center;
   color: white;
   background-color: var(--primary-color);
 }
-.footer-heading{
+
+.footer-heading {
   text-align: center;
   margin-top: 0rem;
 }
-.non-bullet{
+
+.non-bullet {
   list-style: none;
   padding-top: 0.5rem;
-  padding-inline-start:0rem ;
+  padding-inline-start: 0rem;
 }
-.list-item-inline{
+
+.list-item-inline {
   display: inline;
   padding: 0rem 1rem;
 }
-.link{
+
+.link {
   padding: 0.8rem 1rem;
   text-decoration: underline;
   color: white;
